Corrected new file name.

--- a/src/VatsimSSO/VatsimSSO.csproj
+++ b/src/VatsimSSO/VatsimSSO.csproj
@@ -57,7 +57,7 @@
   <ItemGroup>
     <Compile Include="SSO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SSOAuthRequest.cs" />
+    <Compile Include="SSOAuthResponse.cs" />
     <Compile Include="SSOReturnData.cs" />
   </ItemGroup>
   <ItemGroup>
